--- a/web/WEB-INF/pages/connexion_admin.xhtml
+++ b/web/WEB-INF/pages/connexion_admin.xhtml
@@ -9,7 +9,7 @@
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport" />
-  <title>Authentification Espace Etudiant</title>
+  <title>Authentification Espace Administrateurs</title>
         
   <h:outputStylesheet library="css" name="bootstrap.min.css" />
   <h:outputStylesheet library="css" name="font-awesome.min.css" />
@@ -19,7 +19,7 @@
 <h:body class="hold-transition login-page">
     <div class="login-box">
       <div class="login-logo">
-            <b>ESPACE</b> ETUDIANTS
+            <b>ESPACE</b> ADMINISTRATEURS
       </div>
       <!-- /.login-logo -->
       <div class="login-box-body">
@@ -27,17 +27,17 @@
 
         <h:form>
           <div class="form-group has-feedback">
-            <h:inputText id="email" value="#{etudiantBean.email}" p:placeholder="E-mail" styleClass="form-control" required="true" requiredMessage="Veuillez saisir votre E-mail"/>  
+              <h:inputText id="email" value="#{adminBean.email}" p:placeholder="E-mail" styleClass="form-control" required="true" requiredMessage="Veuillez saisir votre E-mail"/>  
             <span class="fa fa-envelope form-control-feedback"></span>
           </div>
           <div class="form-group has-feedback">
-              <h:inputSecret id="mdp" value="#{etudiantBean.mdp}" p:placeholder="Mot de passe" required="true" styleClass="form-control" requiredMessage="Veuillez saisir votre mot de passe"/>
+              <h:inputSecret id="mdp" value="#{adminBean.motDePasse}" p:placeholder="Mot de passe" required="true" styleClass="form-control" requiredMessage="Veuillez saisir votre mot de passe"/>
             <span class="fa fa-lock form-control-feedback"></span>
           </div>
           <div class="row">
 
             <div class="col-xs-12">
-                <h:commandButton styleClass="btn btn-primary btn-flat col-xs-12" value="Se connecter" action="#{etudiantBean.login}" />
+                <h:commandButton styleClass="btn btn-primary btn-flat col-xs-12" value="Se connecter" action="#{adminBean.login}" />
             </div>
 
           </div>
@@ -45,13 +45,10 @@
         <hr/>
 
         <a href="#">J'ai oublié mon mot de passe</a><br/>
-        <pretty:link mappingId="inscriptionE">
-            Inscription
-        </pretty:link>
-        |
         <pretty:link mappingId="home" styleClass="text-primary">
             Accueil
         </pretty:link>
+
       </div>
       <h:messages styleClass="alert alert-danger" style="margin-top: 10px;padding-left: 60px"/>
     </div>
