--- a/web/WEB-INF/pages/VerificationCompteProfesseur.xhtml
+++ b/web/WEB-INF/pages/VerificationCompteProfesseur.xhtml
@@ -35,12 +35,12 @@
                 
                 <div id="compteActive" class="text-center">
                     <h2 class="text-success"><i class="fa fa-gift"></i> Votre adresse email est vérifié.</h2>
-                    <h2 class="text-success"><i class="fa fa-gift"></i> Votre compte HelpYAcademy est activé</h2> 
+                    <h2 class="text-info"><i class="fa fa-info"></i> Votre demande sera examiné par l'administration. Nous vous répondez par email le plus tôt possible</h2> 
                 </div>
                 <br/>
                 <br/>
-                <pretty:link id="btn-connextion" mappingId="connexion_etudiant" styleClass="btn btn-default col-sm-offset-4 col-sm-4">
-                    <i class="fa fa-sign-in"></i> Connectez-vous
+                <pretty:link id="btn-home" mappingId="home" styleClass="btn btn-default col-sm-offset-4 col-sm-4">
+                    <i class="fa fa-home"></i> Accueil
                 </pretty:link>
                 
             </div>
