--- a/web/WEB-INF/espaces/professeur/gestionCMD.xhtml
+++ b/web/WEB-INF/espaces/professeur/gestionCMD.xhtml
@@ -1,18 +1,20 @@
-<ui:composition template="../templates/espaceEtudiant.xhtml"
+<ui:composition template="../templates/espaceProfesseur.xhtml"
                 xmlns="http://www.w3.org/1999/xhtml"
                 xmlns:ui="http://java.sun.com/jsf/facelets"
-                xmlns:h="http://java.sun.com/jsf/html"
                 xmlns:c="http://java.sun.com/jsp/jstl/core"
-                xmlns:f="http://java.sun.com/jsf/core">
-    <ui:define name="title">Mes Commandes | HelpYAcademy</ui:define>
-    <ui:define name="page-title"> <i class="fa fa-cart-plus"></i> Mes Commandes</ui:define>
+                xmlns:h="http://java.sun.com/jsf/html"
+                xmlns:f="http://java.sun.com/jsf/core"
+                xmlns:p="http://java.sun.com/jsf/passthrough">
+    <ui:define name="title">Gestion des Commandes | HelpYAcademy</ui:define>
+    <ui:define name="page-title"> Gestion des Commandes </ui:define>
     <ui:define name="page-subtitle"></ui:define>
+
     <ui:define name="page-content">
-        <h:messages styleClass="alert #{trouverSoutienBean.success ? 'alert-success':'alert-danger'} col-sm-12" style="padding-left: 40px;margin-top:10px"/>
+        <h:messages styleClass="alert #{trouverSoutienBean.success ? 'alert-success':'alert-danger'} col-sm-12" style="padding-left: 40px;margin-top:10px;margin-bottom: -10px"/>
 
         <div class="col-sm-12" style="padding: 0">
             <c:choose>
-                <c:when test="#{trouverSoutienBean.emptyListCommandes()}">
+                <c:when test="#{trouverSoutienBean.emptyListCommandesP()}">
                     <p class="text-center text-muted" style="margin-top: 80px;font-size: 2.3em">Pas de Commandes</p>
                 </c:when>
                 <c:otherwise>
@@ -46,27 +48,24 @@
                         <h:column headerClass="col-sm-1">    				
                             <f:facet name="header"></f:facet>    				
                             <h:form>
-                                <h:commandButton id="moreInfo" value="Plus d'info" styleClass="btn btn-sm btn-info" action="#{trouverSoutienBean.plusInfo(cmd)}"
+                                <h:commandButton id="moreInfo" value="Plus d'info" styleClass="btn btn-sm btn-info" action="#{trouverSoutienBean.plusInfoP(cmd)}"
                                                  onclick="$('#plusInfo').modal('show');">
-                                    <f:ajax execute="@this" render="matiereP niveauP profP dureeP descP titreP prixP dateDebutP heureDebutP"/>
+                                    <f:ajax execute="@this" render="NivMatiereP matiereP niveauP profP dureeP descP titreP prixP dateDebutP heureDebutP"/>
                                 </h:commandButton>
                             </h:form>
                         </h:column>
-                        <!-- Modification -->
+                        <!-- Accepter -->
                         <h:column headerClass="col-sm-1">    				
                             <f:facet name="header"></f:facet>    				
-                            <h:form>
-                                <h:commandButton disabled="#{cmd.statut == 1 or cmd.statut == 2 or cmd.statut == 3}" id="update" value="Modifier" styleClass="btn btn-sm btn-primary" action="#{trouverSoutienBean.initUpdate(cmd)}"
-                                                 onclick="$('#ModifierModal').modal('show');">
-                                    <f:ajax execute="@this" render="updateForm"/>
-                                </h:commandButton>
+                            <h:form onsubmit="return confirm('Vous voulez vraiment continuer ?')">
+                                <h:commandButton disabled="#{cmd.statut == 1 or cmd.statut == 2 or cmd.statut == 3}" id="accepter" value="Accepter" styleClass="btn btn-sm btn-success" action="#{trouverSoutienBean.accepter(cmd)}" />
                             </h:form>
                         </h:column>
-                        <!-- Annule -->
+                        <!-- Annuler -->
                         <h:column headerClass="col-sm-1">    				
                             <f:facet name="header"></f:facet>
                             <h:form onsubmit="return confirm('Vous voulez vraiment continuer ?')">
-                                <h:commandButton id="delete" styleClass="btn btn-sm btn-danger" disabled="#{cmd.statut == 1 or cmd.statut == 2 or cmd.statut == 3}" value="Annuler" action="#{trouverSoutienBean.annuler(cmd)}" />
+                                <h:commandButton id="delete" styleClass="btn btn-sm btn-danger" disabled="#{cmd.statut == 1 or cmd.statut == 2 or cmd.statut == 3}" value="Annuler" action="#{trouverSoutienBean.annulerP(cmd)}" />
                             </h:form>
                         </h:column>
                     </h:dataTable>
@@ -85,9 +84,15 @@
                     <div class="modal-body">
                         <table class="table table-bordered table-condensed">
                             <tr>
-                                <th>Nom de Professeur</th>
+                                <th>Nom et Prenom d'Eleve</th>
                                 <td>
-                                    <h:outputText id="profP" value="#{trouverSoutienBean.prof}" />
+                                    <h:outputText id="profP" value="#{trouverSoutienBean.etudiant}" />
+                                </td>
+                            </tr>
+                            <tr>
+                                <th>Niveau d'Eleve</th>
+                                <td>
+                                    <h:outputText id="niveauP" value="#{trouverSoutienBean.nivEtudiant}" />
                                 </td>
                             </tr>
                             <tr>
@@ -99,7 +104,7 @@
                             <tr>
                                 <th>Niveau du Matiere</th>
                                 <td>
-                                    <h:outputText id="niveauP" value="#{trouverSoutienBean.niveau}" />
+                                    <h:outputText id="NivMatiereP" value="#{trouverSoutienBean.nivMatiere}" />
                                 </td>
                             </tr>
                             <tr>
@@ -121,12 +126,6 @@
                                 </td>
                             </tr>
                             <tr>
-                                <th>Prix Total</th>
-                                <td>
-                                    <h:outputText id="prixP" value="#{trouverSoutienBean.prixTotal} DH" />
-                                </td>
-                            </tr>
-                            <tr>
                                 <th>Date Début</th>
                                 <td>
                                     <h:outputText id="dateDebutP" value="#{trouverSoutienBean.dateDebut}" />
@@ -138,6 +137,12 @@
                                     <h:outputText id="heureDebutP" value="#{trouverSoutienBean.heureDebut}" />
                                 </td>
                             </tr>
+                            <tr>
+                                <th>Prix Total</th>
+                                <td>
+                                    <h:outputText id="prixP" value="#{trouverSoutienBean.prixTotal} DH" />
+                                </td>
+                            </tr>
                         </table>
                     </div>
                     <div class="modal-footer">
@@ -146,5 +151,17 @@
                 </div>
             </div>
         </div>
+    </ui:define>
+    <ui:define name="css">
+        <h:outputStylesheet library="css" name="datepicker3.css" />
+    </ui:define>
+    <ui:define name="js">
+        <h:outputScript library="js" name="bootstrap-datepicker.js" />
+        <script>
+            $('#form\\:dateNaiss').datepicker({
+                autoclose: true,
+                format: "yyyy-mm-dd"
+            });
+        </script>
     </ui:define>
 </ui:composition>
