--- a/web/WEB-INF/espaces/etudiant/trouvezSoutien.xhtml
+++ b/web/WEB-INF/espaces/etudiant/trouvezSoutien.xhtml
@@ -6,7 +6,7 @@
                 xmlns:fun="http://java.sun.com/jsp/jstl/functions"
                 xmlns:f="http://java.sun.com/jsf/core">
     <ui:define name="title">Trouvez un Soutien | HelpYAcademy</ui:define>
-    <ui:define name="page-title">Liste des professeurs qui enseigne cette matiere</ui:define>
+    <ui:define name="page-title">Offres des professeurs pour l'enseignement de cette matière</ui:define>
     <ui:define name="page-subtitle"></ui:define>
     <ui:define name="page-content">
         <h:messages styleClass="alert #{trouverSoutienBean.success ? 'alert-success':'alert-danger'} col-sm-12" style="padding-left: 40px;margin-top:10px"/>
