--- a/web/WEB-INF/espaces/professeur/gestionCMD.xhtml
+++ b/web/WEB-INF/espaces/professeur/gestionCMD.xhtml
@@ -79,7 +79,7 @@
                 <div class="modal-content">
                     <div class="modal-header">
                         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true"><i class="fa fa-close"></i></span></button>
-                        <h4 class="modal-title" id="myModalLabel">Plus d'information sur votre commande </h4>
+                        <h4 class="modal-title" id="myModalLabel">Plus d'information sur la commande </h4>
                     </div>
                     <div class="modal-body">
                         <table class="table table-bordered table-condensed">
