--- a/web/WEB-INF/espaces/professeur/gestionMatiere.xhtml
+++ b/web/WEB-INF/espaces/professeur/gestionMatiere.xhtml
@@ -5,15 +5,15 @@
                 xmlns:h="http://java.sun.com/jsf/html"
                 xmlns:f="http://java.sun.com/jsf/core"
                 xmlns:p="http://xmlns.jcp.org/jsf/passthrough">
-    <ui:define name="title">Gestion Matières | HelpYAcademy</ui:define>
+    <ui:define name="title">Gestion des Offres | HelpYAcademy</ui:define>
     <ui:define name="page-title">
-        Gestion Matières
+        Gestion des Offres
     </ui:define>
     <ui:define name="page-subtitle"></ui:define>
 
     <ui:define name="page-content">
 
-        <button class="btn btn-sm btn-success" data-toggle="modal" data-target="#ajouterMatiere"> <i class="fa fa-plus"></i> Ajouter une Matière </button>
+        <button class="btn btn-sm btn-success" data-toggle="modal" data-target="#ajouterMatiere"> <i class="fa fa-plus"></i> Ajouter un Offre </button>
         <h:messages styleClass="alert #{enseignerBean.success ? 'alert-success':'alert-danger'} col-sm-12" style="padding-left: 40px;margin-top:10px"/>
 
         <div class="col-sm-12" style="padding: 0">
@@ -73,7 +73,7 @@
                 <div class="modal-content" id="updatePlusInfo">
                     <div class="modal-header">
                         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true"><i class="fa fa-close"></i></span></button>
-                        <h4 class="modal-title" id="myModalLabel">Plus d'information sur la Matière</h4>
+                        <h4 class="modal-title" id="myModalLabel">Plus d'information sur l'Offre</h4>
                     </div>
                     <div class="modal-body form-horizontal">
                         <div class="form-group">
@@ -122,7 +122,7 @@
                     <h:form>
                         <div class="modal-header">
                             <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true"><i class="fa fa-close"></i></span></button>
-                            <h4 class="modal-title" id="myModalLabel">Nouvelle Matière</h4>
+                            <h4 class="modal-title" id="myModalLabel">Nouveau Offre</h4>
                         </div>
                         <div class="modal-body form-horizontal">
                             <div class="form-group">
@@ -181,7 +181,7 @@
                     <h:form id="updateForm">
                         <div class="modal-header">
                             <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true"><i class="fa fa-close"></i></span></button>
-                            <h4 class="modal-title" id="myModalLabel">Modification d'une Matière</h4>
+                            <h4 class="modal-title" id="myModalLabel">Modification d'un Offre</h4>
                         </div>
                         <div class="modal-body form-horizontal">
                             <div class="form-group">
