--- a/web/WEB-INF/espaces/professeur/index.xhtml
+++ b/web/WEB-INF/espaces/professeur/index.xhtml
@@ -1,7 +1,63 @@
 <ui:composition template="../templates/espaceProfesseur.xhtml"
-    xmlns:ui="http://java.sun.com/jsf/facelets">
-        <ui:define name="title">Espace Professeur | HelpYAcademy</ui:define>
-        <ui:define name="page-title">
-            test
-        </ui:define>
+                xmlns="http://www.w3.org/1999/xhtml"
+                xmlns:ui="http://java.sun.com/jsf/facelets"
+                xmlns:c="http://java.sun.com/jsp/jstl/core"
+                xmlns:h="http://java.sun.com/jsf/html"
+                xmlns:f="http://java.sun.com/jsf/core"
+                xmlns:pretty='http://ocpsoft.com/prettyfaces'>
+    <ui:define name="title">Espace Professeur | HelpYAcademy</ui:define>
+    <ui:define name="page-title"></ui:define>
+    <ui:define name="page-subtitle"></ui:define>
+    <ui:define name="page-content">
+        <div class="row" style="margin-top: -30px">
+
+            <div class="col-lg-4 col-xs-6">
+                <!-- small box -->
+                <div class="small-box bg-aqua">
+                    <div class="inner">
+                        <h3>#{professeurBean.nbrNouvelleCmd}</h3>
+                        <p>Nouvelle Commandes</p>
+                    </div>
+                    <div class="icon">
+                        <i class="fa fa-cart-plus"></i>
+                    </div>
+                    <pretty:link mappingId="EspaceP_GestionCMD" styleClass="small-box-footer">
+                        Plus d'info <i class="fa fa-arrow-circle-right"></i>
+                    </pretty:link>
+                </div>
+            </div>
+
+            <div class="col-lg-3 col-xs-6">
+                <!-- small box -->
+                <div class="small-box bg-green">
+                    <div class="inner">
+                        <h3>#{professeurBean.nbrMesCours}</h3>
+                        <p>Mes Offres</p>
+                    </div>
+                    <div class="icon">
+                        <i class="fa fa-book"></i>
+                    </div>
+                    <pretty:link mappingId="gestionMatiereP" styleClass="small-box-footer">
+                        Plus d'info <i class="fa fa-arrow-circle-right"></i>
+                    </pretty:link>
+                </div>
+            </div>
+
+            <div class="col-lg-4 col-xs-6">
+                <!-- small box -->
+                <div class="small-box bg-light-blue">
+                    <div class="inner">
+                        <h3>#{professeurBean.nbrCoursPrevenu}</h3>
+                        <p>Cours Programmé</p>
+                        <div class="icon">
+                            <i class="fa fa-video-camera"></i>
+                        </div>
+                    </div>
+                    <pretty:link mappingId="EspaceP_GestionCours" styleClass="small-box-footer">
+                        Plus d'info <i class="fa fa-arrow-circle-right"></i>
+                    </pretty:link>
+                </div>
+            </div>
+        </div>
+    </ui:define>
 </ui:composition>
