--- a/web/WEB-INF/espaces/admin/config.xhtml
+++ b/web/WEB-INF/espaces/admin/config.xhtml
@@ -10,39 +10,9 @@
     <ui:define name="page-content">
 
         <h:messages styleClass="alert #{configBean.success ? 'alert-success':'alert-danger'} col-xs-12" style="padding-left: 40px;margin-top:10px"/>
-        <!-- BBB -->
-        <div class="panel panel-default col-xs-5" style="padding:0">
-            <div class="panel-heading col-xs-12" style="padding: 2px">
-                <h2 class="panel-title pull-left" style="margin-left: 10px;margin-top: 8px"><i class="fa fa-server"></i> Serveur BigBlueButton</h2>
-                <h:form styleClass="pull-right">
-                    <h:commandButton id="update" value="Modifier" styleClass="btn btn-sm btn-info" action="#{configBean.initBBBUpdate()}"
-                                     onclick="$('#BBBModal').modal('show');">
-                        <f:ajax execute="@this" render="updateBBBForm"/>
-                    </h:commandButton>
-                </h:form>
-                <h:form styleClass="pull-right" style="margin-right: 5px">
-                    <h:commandButton value="Tester le Serveur" styleClass="btn btn-sm btn-success" action="#{configBean.testBBBServeur()}"
-                                     onclick="$('#BBBTestModal').modal('show');">
-                        <f:ajax execute="@this" render="label1 label2"/>
-                    </h:commandButton>
-                </h:form>
-                <button class="btn btn-sm btn-default pull-right" style="margin-right: 5px" onclick="reload()"><i class="fa fa-repeat"></i></button>
-            </div>
-            <div class="panel-body" style="padding: 0">
-                <table class="table table-bordered table-striped" style="margin: 0">
-                    <tr>
-                        <th class="text-light-blue col-sm-1">URL</th>
-                        <td class="col-sm-11"> #{configBean.url}</td>
-                    </tr>
-                    <tr>
-                        <th class="text-light-blue col-sm-1">Salt</th>
-                        <td class="col-sm-11"> #{configBean.salt}</td>
-                    </tr>
-                </table>
-            </div>
-        </div>
+
         <!-- Service E-mail -->
-        <div class="panel panel-default col-xs-6 col-xs-offset-1" style="padding:0;">
+        <div class="panel panel-default col-xs-6" style="padding:0;">
             <div class="panel-heading col-xs-12" style="padding: 2px">
                 <h2 class="panel-title pull-left" style="margin-left: 10px;margin-top: 8px"><i class="fa fa-envelope-o"></i> Service Mail</h2>
                 <h:form styleClass="pull-right">
@@ -78,6 +48,82 @@
                 </table>
             </div>
         </div>
+        <!-- BBB -->
+        <div class="panel panel-default col-xs-5 col-xs-offset-1" style="padding:0">
+            <div class="panel-heading col-xs-12" style="padding: 2px">
+                <h2 class="panel-title pull-left" style="margin-left: 10px;margin-top: 8px"><i class="fa fa-server"></i> Serveur BigBlueButton</h2>
+                <h:form styleClass="pull-right">
+                    <h:commandButton id="update" value="Modifier" styleClass="btn btn-sm btn-info" action="#{configBean.initBBBUpdate()}"
+                                     onclick="$('#BBBModal').modal('show');">
+                        <f:ajax execute="@this" render="updateBBBForm"/>
+                    </h:commandButton>
+                </h:form>
+                <h:form styleClass="pull-right" style="margin-right: 5px">
+                    <h:commandButton value="Tester le Serveur" styleClass="btn btn-sm btn-success" action="#{configBean.testBBBServeur()}"
+                                     onclick="$('#BBBTestModal').modal('show');">
+                        <f:ajax execute="@this" render="label1 label2"/>
+                    </h:commandButton>
+                </h:form>
+                <button class="btn btn-sm btn-default pull-right" style="margin-right: 5px" onclick="reload()"><i class="fa fa-repeat"></i></button>
+            </div>
+            <div class="panel-body" style="padding: 0">
+                <table class="table table-bordered table-striped" style="margin: 0">
+                    <tr>
+                        <th class="text-light-blue col-sm-1">URL</th>
+                        <td class="col-sm-11"> #{configBean.url}</td>
+                    </tr>
+                    <tr>
+                        <th class="text-light-blue col-sm-1">Salt</th>
+                        <td class="col-sm-11"> #{configBean.salt}</td>
+                    </tr>
+                </table>
+            </div>
+        </div>
+        <!-- Web Site Config -->
+        <div class="panel panel-default col-xs-5 col-xs-offset-1" style="padding:0">
+            <div class="panel-heading col-xs-12" style="padding: 2px">
+                <h2 class="panel-title pull-left" style="margin-left: 10px;margin-top: 8px"><i class="fa fa-globe"></i> Paramètres du site</h2>
+                <h:form styleClass="pull-right">
+                    <h:commandButton value="Modifier" styleClass="btn btn-sm btn-info" action="#{configBean.initWebSiteSettingUpdate()}"
+                                     onclick="$('#SiteConfModal').modal('show');">
+                        <f:ajax execute="@this" render="updateSiteConfForm"/>
+                    </h:commandButton>
+                </h:form>
+            </div>
+            <div class="panel-body" style="padding: 0">
+                <table class="table table-bordered table-striped" style="margin: 0">
+                    <tr>
+                        <th class="text-light-blue col-sm-1">URL</th>
+                        <td class="col-sm-11"> #{configBean.urlSite}</td>
+                    </tr>
+                </table>
+            </div>
+        </div>
+        <!-- Site Conf Modal -->
+        <div class="modal fade" id="SiteConfModal" tabindex="-1" role="dialog">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <h:form styleClass="form-horizontal" id="updateSiteConfForm">
+                        <div class="modal-header">
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true"><i class="fa fa-close"></i></span></button>
+                            <h4 class="modal-title" id="myModalLabel"> Paramètres du site</h4>
+                        </div>
+                        <div class="modal-body">
+                            <div class="form-group">
+                                <h:outputLabel for="url" styleClass="col-sm-4 control-label" value="URL"/>
+                                <div class="col-sm-8">
+                                    <h:inputText value="#{configBean.urlSiteM}" id="url" styleClass="form-control" required="true" requiredMessage="Veuillez entrer URL du Serveur BBB" />
+                                </div>
+                            </div>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-default" data-dismiss="modal">Fermer</button>
+                            <h:commandButton styleClass="btn btn-primary" value="Enregistrer" action="#{configBean.webSiteSettingUpdate()}"/>
+                        </div>
+                    </h:form>
+                </div>
+            </div>
+        </div>
         <!-- Service Mail Modal -->
         <div class="modal fade" id="SMailModal" tabindex="-1" role="dialog">
             <div class="modal-dialog" role="document">
@@ -88,7 +134,7 @@
                             <h4 class="modal-title" id="myModalLabel">Configurations du Service Mail</h4>
                         </div>
                         <div class="modal-body">
-                            
+
                             <div class="form-group">
                                 <h:outputLabel for="host" styleClass="col-sm-4 control-label" value="Host"/>
                                 <div class="col-sm-8">
@@ -185,7 +231,7 @@
     </ui:define>
     <ui:define name="js">
         <script>
-            function reload(){
+            function reload() {
                 location.reload();
             }
         </script>
